Page badge avec les utilisateurs l'ayant obtenu, fix Sinscrire.jsx, fix fenetreCours, fix overflow pseudo header

--- a/src/elements/Header/Header.module.css
+++ b/src/elements/Header/Header.module.css
@@ -51,6 +51,10 @@
 .header p {
     padding-right: 1vh;
     padding-left: 1vh;
+    max-width: 20vw;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .header .active p {
